# sdl2-starter

./: CMakeLists copy.txt  CMakeLists.txt  CMakePresets.json  README.MD
src/: sqlapp.cpp
